Related article, article type, etc.

--- a/nodes/contributor/contributor.css
+++ b/nodes/contributor/contributor.css
@@ -12,6 +12,7 @@ Contributor
 }
 
 .lens-article .content-node.contributor .label {
-  margin-top: 10px;
+  font-size: 14px;
+  margin-top: 20px;
   color: #777;
 }
