--- a/nodes/cover/cover.css
+++ b/nodes/cover/cover.css
@@ -44,3 +44,8 @@
   margin-right: 10px;
   margin-bottom: 8px;
 }
+
+.lens-article .content-node.cover .authors .text.plain {
+  color: #777;
+  padding-left: 1px;
+}
