More minimal box style.

--- a/nodes/box/box.css
+++ b/nodes/box/box.css
@@ -24,6 +24,10 @@ Box
   /*background: #ccc;*/
 }
 
+.surface.content .content-node.box > .content {
+  border: 1px dotted #ddd;
+}
+
 .surface.content .content-node.box .content {
-  background: #eee;
+  background: #fbfbfb;
 }
