Include DOI on the front cover.

--- a/nodes/cover/cover.css
+++ b/nodes/cover/cover.css
@@ -35,6 +35,13 @@
   color: #666;
 }
 
+.lens-article .content-node.cover .doi {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  color: #666;
+  font-size: 14px;
+}
+
 .lens-article .content-node.cover .content .authors {
   padding-top: 30px;
   color: #1B6685;
